changed node selector arch to amd64

--- a/resources/issuer.yaml
+++ b/resources/issuer.yaml
@@ -16,7 +16,7 @@ spec:
           podTemplate:
             spec:
               nodeSelector:
-                kubernetes.io/arch: arm64
+                kubernetes.io/arch: amd64
     
 
 ---
@@ -39,4 +39,4 @@ spec:
           podTemplate:
             spec:
               nodeSelector:
-                kubernetes.io/arch: arm64
+                kubernetes.io/arch: amd64
